fix(inventory-stock-visualizer): make the number skeleton compact and visible on the status pill

--- a/InventoryStockVisualizer/view/frontend/web/css/source/_module.less
+++ b/InventoryStockVisualizer/view/frontend/web/css/source/_module.less
@@ -12,7 +12,8 @@
 @sv__head-bg: darken(@color-white, 3%);
 @sv__track: darken(@color-white, 9%);
 @sv__muted: @text__color__muted;
-@sv__skeleton-bg: @color-gray91;
+@sv__skeleton-bg: fade(@primary__color, 12%);
+@sv__skeleton-hi: fade(@primary__color, 24%);
 @sv__tint: 12%;
 
 .sv-status-colors(@color) {
@@ -207,19 +208,19 @@
 
         .sv-skel {
             display: inline-block;
-            width: 2.5em;
-            height: 1em;
-            vertical-align: middle;
-            border-radius: 3px;
+            width: 2ch;
+            height: .8em;
+            vertical-align: -.05em;
+            border-radius: 2px;
             background: @sv__skeleton-bg;
             background-image: linear-gradient(
                 90deg,
                 @sv__skeleton-bg 25%,
-                darken(@sv__skeleton-bg, 6%) 37%,
+                @sv__skeleton-hi 37%,
                 @sv__skeleton-bg 63%
             );
             background-size: 400% 100%;
-            animation: sv-shimmer 1.4s ease infinite;
+            animation: sv-shimmer 1.2s ease infinite;
         }
 
         .stock-visualizer-cta {
